# time-service

./: .gitignore  Dockerfile  README.md  pyproject.toml  run-locally.sh
.github/workflows/: docker-build.yml
app/api/v1/: api.py
app/api/v1/endpoints/: get_time.py
app/core/: config.py  time_utils.py
app/schemas/: time.py
helm/: Chart.yaml  values.yaml
helm/templates/: NOTES.txt  deployment.yaml
