[tool.poetry]
name = "time-service"
version = "0.1.0"
description = "A simple REST API that returns Unix time"
authors = ["Mauricio Bahamonde <mauricioc.bahamonde@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.63.0"
black = "^20.8b1"
uvicorn = "^0.13.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
